new map and other tab added

--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@angular/platform-browser": "~10.2.4",
     "@angular/platform-browser-dynamic": "~10.2.4",
     "@angular/router": "~10.2.4",
+    "@angular/service-worker": "~10.2.4",
+    "angular-cesium": "^0.0.72",
+    "cesium": "^1.84.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "ngx-webcam": "^0.3.2",
