--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~10.2.4",
     "@angular/router": "~10.2.4",
     "@angular/service-worker": "~10.2.4",
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "angular-cesium": "^0.0.72",
     "cesium": "^1.84.0",
     "moment": "^2.29.1",
